
2020-03-31  Ron Norman <rjn@inglenet.com>

	* codegen.c,config.def: Based on 'align-record' 01s & 77s will be grouped
				into the same 'static cob_u8_t' and aligned on an address 
				boundary defined by 'align-record'.
				If 'align-record' has a 0 value, then no grouping is done
				Also 'align-opt' with 'yes' meaning like MF ALIGN"n OPT"
				and the if 'no' then like MF ALIGN"n FIXED"

2020-03-28  Ron Norman <rjn@inglenet.com>

	* config.def, cob.c, config.c: Added support for new config type of
				CB_CONFIG_SIZE which may end with K, M, G (eg. 250M)

2020-03-27  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (check_preceding_tallying_phrases): allow consecutives
	  CHARACTERS keywords (revival of bug #47).

2020-03-27  Simon Sobisch <simonsobisch@gnu.org>

	* config.def, typeck.c: switched "select-working" to support option,
	  deactivated it (see bug #421)

2020-03-01  Brian Tiffin <btiffin@gnu.org>

	* cobc.c: bug #618, fix -j mode with -o name that includes a directory
				and when multiple inputs are involved in a compile pass

2020-02-13  Simon Sobisch <simonsobisch@gnu.org>

	* sqlxfdgen.c (output_xfd_file): fixed typo leading to broken reference
	* codegen.c: cleanup for output_line_and_trace_info

2020-02-12  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Generate more database independent SQL column types
	* codegen.c: Check for $XFD ALL being set which indicates that
				all files are being defined for SQL use
				Only emit filename.xd for INDEXED and RELATIVE files

2020-02-10  Ron Norman <rjn@inglenet.com>

	* cobc.c, cobc.h, codegen.c, help.c, warning.def: 
		Add new define CB_ERRWARNDEF

2020-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* flag.def: adjusted some definitions CB_FLAG_RQ->CB_FLAG_NQ

2020-02-09  Ron Norman <rjn@inglenet.com>

	* cobc.c, codegen.c, typeck.c, sysdefines.h, warning.def: FR #117
	  report when the COBOL code is using a feature which GnuCOBOL was not
	  configured to support;